Wed Sep 29 05:35:03 GMT 2010  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am: Fix to delete libxapian_jni.la rather than
	  xapian.la.

Wed Sep 29 05:33:43 GMT 2010  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,xapian-bindings.spec.in: Don't install or package
	  _XapianSharp.la.

Wed Sep 29 05:19:44 GMT 2010  Olly Betts <olly@survex.com>

	* xapian-bindings.spec.in: Package the Perl bindings too (patch from
	  Tim Brody).

Wed Sep 29 04:44:24 GMT 2010  Olly Betts <olly@survex.com>

	* perl/Makefile.am: Don't install Xapian.la.

Wed Sep 29 02:30:49 GMT 2010  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/10query.t,perl/util.i.in: Fix building a
	  Query from subqueries which are themselves Query objects.  Patch
	  from Tim Brody.

Mon Sep 27 13:00:33 GMT 2010  Olly Betts <olly@survex.com>

	* php/Makefile.am: Fix $(PHP_MAJOR_VERSION) to literal 5 in two places.

Mon Sep 27 12:51:19 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Need python in maintainer mode to run doxy2swig.py.

Wed Sep 08 03:10:33 GMT 2010  Olly Betts <olly@survex.com>

	* perl/t/01use.t: Revert debug change, as it has served its purpose.
	* configure.ac: Handle the "_svn<rev>" suffix of snapshot versions
	  specially for Perl, to match how this is handled for Search::Xapian.

Wed Sep 08 02:00:34 GMT 2010  Olly Betts <olly@survex.com>

	* perl/t/01use.t: This test is mysteriously failing in the snapshot
	  builder, so add a line of code to help debug this.

Wed Sep 08 00:24:58 GMT 2010  Olly Betts <olly@survex.com>

	* java-swig/Makefile.am: Remove commented out SUBDIRS line.

Wed Sep 08 00:24:22 GMT 2010  Olly Betts <olly@survex.com>

	* perl/Makefile.am: Fix to create docs subdirectory when srcdir !=
	  builddir.

Tue Sep 07 11:54:58 GMT 2010  Olly Betts <olly@survex.com>

	* ruby/Makefile.am,ruby/docs/generate-rdoc-stubs,
	  ruby/generate-rdoc-stubs: Fix generation of rdocs to work when srcdir
	  != buildir (broken by last but one commit).
